Closed Bug 468690 Opened 17 years ago Closed 17 years ago

"ASSERTION: Reframes of this letter frame will mess with the root of a native anonymous content subtree!" loading 388709-1.html

Categories

(Core :: Layout, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: roc)

References

Details

(Keywords: assertion, fixed1.9.1, testcase)

Attachments

(1 file)

Loading layout/generic/crashtests/388709-1.html triggers: ###!!! ASSERTION: Reframes of this letter frame will mess with the root of a native anonymous content subtree!: '!letterContent->IsRootOfNativeAnonymousSubtree()', file /Users/jruderman/central/layout/base/nsCSSFrameConstructor.cpp, line 11782 roc removed one of the instances of this assertion in bug 451117. Should the other two instances be removed as well, or is this a real bug?
Flags: in-testsuite+
I only see one more instance, which should be removed. Where's the other one?
I guess there's only one more. mxr lied to me by showing outdated search results alongside links to non-outdated blame. http://mxr.mozilla.org/mozilla-central/search?string=Reframes+of+this+lette&find=nsCSSFr
Attached patch fix, trivialSplinter Review
Assignee: nobody → roc
Attachment #352209 - Flags: superreview?(bzbarsky)
Attachment #352209 - Flags: review?(bzbarsky)
Attachment #352209 - Flags: superreview?(bzbarsky)
Attachment #352209 - Flags: superreview+
Attachment #352209 - Flags: review?(bzbarsky)
Attachment #352209 - Flags: review+
Whiteboard: [needs landing]
Pushed d6fb8793c1a9 to trunk
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing] → [needs 191 approval]
Comment on attachment 352209 [details] [diff] [review] fix, trivial trivial patch, just removes an assertion
Attachment #352209 - Flags: approval1.9.1?
Comment on attachment 352209 [details] [diff] [review] fix, trivial a191=beltzner
Attachment #352209 - Flags: approval1.9.1? → approval1.9.1+
Whiteboard: [needs 191 approval] → [needs 191 landing]
Pushed 3136ba367137 to 1.9.1
Keywords: fixed1.9.1
Whiteboard: [needs 191 landing]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: