Bug 468690. Remove leftover assertion that's no longer needed after the fix for bug 460012. r+sr=bzbarsky